--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>3.0</version>
+        <version>3.0.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -28,6 +28,12 @@
             <artifactId>lutece-core</artifactId>
             <version>[5.0.0,)</version>
             <type>lutece-core</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-franceconnect</artifactId>
+            <version>[0.9.0,)</version>
+            <type>lutece-plugin</type>
         </dependency>
     </dependencies>
 
