--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-fcsample</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>Lutece fcsample plugin</name>
 
     <repositories>
@@ -47,7 +47,7 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/franceconnect-plugin-fcsample.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/franceconnect-plugin-fcsample.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/franceconnect-plugin-fcsample.git</url>
-      <tag>franceconnect-plugin-fcsample-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
     
 </project>
